src/test/deca/syntax/invalid/affectation-plusEqual.synt
affectation-plusEqual.deca:4: